# ai-karaoke-platform

./: README.md  manual_align.cjs  package-lock.json  pitch_alignment_test.html  深度学习与神经网络大作业报告.md  项目开发历程与AI协作记录.md
backend/: generate_midi_pitch.py  lyric_transcriber.py  main.py  midi_pitch_extractor.py  prepare_midi_templates.py  preprocess_songs.py  requirements.txt  vocal_critic.py
backend/cache/: danche_user_pitches.json  pitch_deviation_danche_20260611_181027.json  pitch_deviation_danche_20260611_181101.json  pitch_deviation_danche_20260611_181505.json  pitch_deviation_danche_20260611_182100.json  pitch_deviation_danche_20260611_182244.json  pitch_deviation_danche_20260611_182603.json  pitch_deviation_danche_20260611_182629.json  pitch_deviation_danche_20260611_183509.json  pitch_deviation_danche_20260611_183552.json  pitch_deviation_danche_20260611_184258.json  pitch_deviation_danche_20260611_184420.json  pitch_deviation_danche_20260611_200850.json  pitch_deviation_danche_20260614_101931.json  pitch_deviation_danche_20260614_103502.json  pitch_deviation_danche_20260614_105149.json  pitch_deviation_danche_20260614_140245.json  pitch_deviation_danche_20260614_141046.json  pitch_deviation_danche_20260614_142415.json  pitch_deviation_danche_20260618_224206.json  (+47 more)
backend/swift-f0-main/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
backend/swift-f0-main/swift_f0/: __init__.py  core.py  music.py
backend/swift-f0-main/swift_f0.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
database/: karaoke.db
frontend/: check_timestamps.cjs  get_duration.cjs  index.html  package.json  test_app.cjs  test_lyric_scroll.cjs  vite.config.ts
src/: App.css  App.tsx  index.css
(+21 files in other folders)
